--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,31 @@ body {
 }
 
 
+#logo {
+    position: absolute;
+}
 
 .navbar-my {
     margin-top: 100px;
+}
+
+/* .container-my {
+    border: 2px solid red;
+    color: chartreuse;
+    font-size: 20px;
+    background: #4e555b;
+}
+
+.container-my2 {
+    border: 2px solid red;
+    color: chartreuse;
+    font-size: 20px;
+    background: #0b2e13;
+}
+ */
+.overlay {
+ /*   position: absolute;
+    min-width: 100%;
+    min-height: 100%; */
+    background: rgba(244,244,244,0.79);
 }
