--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body {
 
 #logo {
     position: absolute;
+    color: white;
+    text-shadow: 2px 2px 3px black, 0 0 0.75em red;
+
 }
 
 .navbar-my {
@@ -30,8 +33,5 @@ body {
 }
  */
 .overlay {
- /*   position: absolute;
-    min-width: 100%;
-    min-height: 100%; */
     background: rgba(244,244,244,0.79);
 }
