--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,21 @@ body {
     margin-top: 100px;
 }
 
+.rightBar {
+    border-radius: 4px ;
+    background: rgba(244, 244, 244, 0.75);
+    padding: unset;
+}
+.rightBarButtonSlide {
+    border: solid 1px;
+    border-radius: 4px;
+    padding: 10px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
 .MainContainer {
     margin-top: 10px;
 }
@@ -40,6 +55,9 @@ body {
     background: rgba(244,244,244,0.79);
 }
 
+.footerContainer {
+    margin-top: 10px;
+}
 .footer1 {
     text-align: center;
     padding: 10px;
